# tensor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.cxx  vcpkg.json
include/: tensor.hpp  tensor.hxx
include/core/: builder.hpp  core.hpp  type.hpp
test/: CMakeLists.txt  test.cpp  tests.cpp
